Bug#33661 - Return the next autoincrement number to use to the server.